deploy/overlays/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: simple-go-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: simple-go.eks.chx.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-go
            port:
              number: 8080
